--- a/html/exp.html
+++ b/html/exp.html
@@ -119,7 +119,7 @@
 
                     <tr>
                         <td colspan="3">
-                            <div style="margin-top: 100px; ">
+                            <div>
                                 <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
                                     <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
                                     <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
