--- a/html/nav.html
+++ b/html/nav.html
@@ -50,7 +50,7 @@
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#admin_login">Log in</a>
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment</a>
-							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal">Update Experiment</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal" ng-click="get_exp_for_update()">Update Experiment</a>
 						</div>
 					 </li>
 				</ul>
