--- a/html/nav.html
+++ b/html/nav.html
@@ -327,29 +327,51 @@
 								<td>
 									<div class="custom-control custom-checkbox" ng-if="exp.disp_type==1">
 										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_type_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_disp_type_checked_{{exp.id}}"></label>
 									</div>
 									<div class="custom-control custom-checkbox" ng-if="exp.disp_type==0">
 										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_type_{{exp.id}}">
+										<label class="custom-control-label" for="upt_exp_disp_type_{{exp.id}}"></label>
 									</div>
 								</td>
 								<td>
-									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_h_{{exp.id}}" value="{{exp.disp_h}}">
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_h==1">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_h_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_disp_h_checked_{{exp.id}}"></label>
+									</div>
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_h==0">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_h_{{exp.id}}" >
+										<label class="custom-control-label" for="upt_exp_disp_h_{{exp.id}}"></label>
 									</div>
 								</td>
 								<td>
-									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_feedback_{{exp.id}}" value="{{exp.disp_feedback}}">
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_feedback==1">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_feedback_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_disp_feedback_checked_{{exp.id}}"></label>
+									</div>
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_feedback==0">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_feedback_{{exp.id}}">
+										<label class="custom-control-label" for="upt_exp_disp_feedback_{{exp.id}}"></label>
 									</div>
 								</td>
 								<td>
-									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_control_{{exp.id}}" value="{{exp.disp_control}}">
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_control==1">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_control_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_disp_control_checked_{{exp.id}}"></label>
+									</div>
+									<div class="custom-control custom-checkbox" ng-if="exp.disp_control==0">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_control_{{exp.id}}">
+										<label class="custom-control-label" for="upt_exp_disp_control_{{exp.id}}"></label>
 									</div>
 								</td>
 								<td>
-									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input" id="upt_exp_is_active_{{exp.id}}" value="{{exp.is_active}}">
+									<div class="custom-control custom-checkbox" ng-if="exp.is_active==1">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_is_active_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_is_active_checked_{{exp.id}}"></label>
+									</div>
+									<div class="custom-control custom-checkbox" ng-if="exp.is_active==0">
+										<input type="checkbox" class="custom-control-input" id="upt_exp_is_active_{{exp.id}}">
+										<label class="custom-control-label" for="upt_exp_is_active_{{exp.id}}"></label>
 									</div>
 								</td>
 							</tr>
