--- a/html/nav.html
+++ b/html/nav.html
@@ -49,6 +49,7 @@
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#admin_login">Log in</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#new_admin">New Admin</a>
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment</a>
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal" ng-click="get_exp_for_update()">Update Experiment</a>
 						</div>
@@ -249,6 +250,50 @@
 
 						</div>
 						<button class="btn btn-md btn-info m-0 px-3" type="button">Login</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="modal fade" id="new_admin" tabindex="-1" role="dialog" aria-labelledby="New Admin Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Sign Up New Admin</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div>
+						<div class="container">
+							<form id="Login" action='../php/new_admin.php' method='post' accept-charset='UTF-8'>
+								<div class="login-form">
+									<div class="main-div">
+										<div class="md-form">
+											<i class="fas fa-envelope prefix"></i>
+											<input type="email" id="new_admin_email" class="form-control validate">
+											<label for="new_admin_email" data-error="wrong" data-success="right">Type your email</label>
+										</div>
+										<div class="md-form">
+											<i class="fas fa-lock prefix"></i>
+											<input type="password" id="new_admin_pass" class="form-control">
+											<label for="new_admin_pass" data-error="wrong" data-success="right">Type your password</label>
+										</div>
+									</div>
+								</div>
+								<button type="submit" class="btn btn-primary">Register</button>
+							</form>
+						</div>
+
+					</div>
+					<div class="modal-footer">
+						<div id="new_admin_log">
+
+						</div>
+						<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
 					</div>
 				</div>
 			</div>
