--- a/html/nav.html
+++ b/html/nav.html
@@ -49,9 +49,9 @@
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#admin_login">Log in</a>
-							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#new_admin">New Admin</a>
+							<!--<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#new_admin">New Admin</a>
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment</a>
-							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal" ng-click="get_exp_for_update()">Update Experiment</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal" ng-click="get_exp_for_update()">Update Experiment</a>-->
 						</div>
 					 </li>
 				</ul>
@@ -232,13 +232,13 @@
 								<div class="main-div">
 									<div class="md-form">
 										<i class="fas fa-envelope prefix"></i>
-										<input type="email" id="inputValidationEx" class="form-control validate">
-										<label for="inputValidationEx" data-error="wrong" data-success="right">Type your email</label>
+										<input type="email" id="admin_email" class="form-control validate">
+										<label for="admin_email" data-error="wrong" data-success="right">Type your email</label>
 									</div>
 									<div class="md-form">
 										<i class="fas fa-lock prefix"></i>
-										<input type="password" id="inputValidationEx2" class="form-control">
-										<label for="inputValidationEx2" data-error="wrong" data-success="right">Type your password</label>
+										<input type="password" id="admin_name" class="form-control">
+										<label for="admin_name" data-error="wrong" data-success="right">Type your password</label>
 									</div>
 								</div>
 							</div>
@@ -249,7 +249,7 @@
 						<div id="admin_login_log">
 
 						</div>
-						<button class="btn btn-md btn-info m-0 px-3" type="button">Login</button>
+						<button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="admin_login()">Login</button>
 					</div>
 				</div>
 			</div>
