--- a/html/nav.html
+++ b/html/nav.html
@@ -44,7 +44,7 @@
 					<li class="nav-item ml-auto" >
 						<a class="nav-link" href="" id="loggin_user" readonly> </a>
 					</li>
-					<li class="nav-item dropdown">
+					<li class="nav-item dropdown" id="nav_admin">
 						<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
