--- a/html/new_user.html
+++ b/html/new_user.html
@@ -44,8 +44,9 @@
 				<div class="col">
 					<div class="md-form">
 						<i class="fas fa-language prefix"></i>
-						<select class="browser-default custom-select" id="new_user_lang">
-							<option value="Afrikanns">Afrikanns</option>
+						<select class="browser-default custom-select" id="new_user_lang" >
+							<option selected>Open this select menu</option>
+							<option value="Afrikaans">Afrikaans</option>
 							<option value="Albanian">Albanian</option>
 							<option value="Arabic">Arabic</option>
 							<option value="Armenian">Armenian</option>
@@ -55,7 +56,7 @@
 							<option value="Catalan">Catalan</option>
 							<option value="Cambodian">Cambodian</option>
 							<option value="Chinese (Mandarin)">Chinese (Mandarin)</option>
-							<option value="Croation">Croation</option>
+							<option value="Croatian">Croatian</option>
 							<option value="Czech">Czech</option>
 							<option value="Danish">Danish</option>
 							<option value="Dutch">Dutch</option>
@@ -111,7 +112,7 @@
 							<option value="Tibetan">Tibetan</option>
 							<option value="Tonga">Tonga</option>
 							<option value="Turkish">Turkish</option>
-							<option value="Ukranian">Ukranian</option>
+							<option value="Ukrainian">Ukrainian</option>
 							<option value="Urdu">Urdu</option>
 							<option value="Uzbek">Uzbek</option>
 							<option value="Vietnamese">Vietnamese</option>
@@ -119,7 +120,6 @@
 							<option value="Xhosa">Xhosa</option>
 							<option value="Other">Other</option>
 						</select>
-						<label for="new_user_lang">Language</label>
 					</div>
 				</div>
 				<div class="col">
