--- a/html/exp.html
+++ b/html/exp.html
@@ -89,7 +89,7 @@
                                         <!--<td id="table_a_{{$index}}">
                                             {{decorateWithSpace($index,item.val)}}
                                         </td>-->
-                                        <td>
+                                        <td style="color:{{item.color}}">
                                             <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
                                         </td>
                                     </tr>
