--- a/html/exp.html
+++ b/html/exp.html
@@ -153,5 +153,27 @@
 
 
 
+    <div class="modal fade" id="pause_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Pause exp Modal" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" >Next Step</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Get ready for the next Step
+                </div>
+                <div class="modal-footer">
+
+                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="pause_exp_modal">I'm Ready!</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
 
 </div>
