--- a/html/exp.html
+++ b/html/exp.html
@@ -174,6 +174,25 @@
         </div>
     </div>
 
+    <div class="modal fade" id="disp_feedback_modal" tabindex="-1" role="dialog" aria-labelledby="feedback exp Modal" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" >Status</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Your answer is Wrong!
+                </div>
+                <div class="modal-footer">
 
+                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 </div>
