--- a/html/exp.html
+++ b/html/exp.html
@@ -162,8 +162,8 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    Get ready for the next Step
+                <div class="modal-body" id="puase_modal_body">
+
                 </div>
                 <div class="modal-footer">
 
