--- a/html/exp.html
+++ b/html/exp.html
@@ -162,7 +162,10 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" id="puase_modal_body">
+                <div class="modal-body" >
+                    <div id="puase_modal_body">
+
+                    </div>
 
                 </div>
                 <div class="modal-footer">
