--- a/html/exp.html
+++ b/html/exp.html
@@ -121,7 +121,18 @@
 
 
                     <tr>
-                        <td colspan="3">
+                        <td>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="user_ans_yes" name="user_ans_yes">
+                                <label class="custom-control-label" for="user_ans_yes">Match</label>
+                            </div>
+                            
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="user_ans_no" name="user_ans_no">
+                                <label class="custom-control-label" for="user_ans_no">No Match</label>
+                            </div>
+                        </td>
+                        <td colspan="2">
                             <div>
                                 <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
                                     <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
