--- a/html/exp.html
+++ b/html/exp.html
@@ -123,12 +123,12 @@
                     <tr>
                         <td>
                             <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="user_ans_yes" name="user_ans_yes">
+                                <input type="radio" class="custom-control-input" id="user_ans_yes" name="user_ans_match">
                                 <label class="custom-control-label" for="user_ans_yes">Match</label>
                             </div>
-                            
+
                             <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="user_ans_no" name="user_ans_no">
+                                <input type="radio" class="custom-control-input" id="user_ans_no" name="user_ans_match">
                                 <label class="custom-control-label" for="user_ans_no">No Match</label>
                             </div>
                         </td>
