--- a/html/exp.html
+++ b/html/exp.html
@@ -134,7 +134,7 @@
                         </td>
                         <td style="width:450px">
                             <div>
-                                <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
+                                <div class="md-form" style="margin: 0 auto;float: none;">
                                     <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
                                     <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
                                     <small id="user_confidenceMD" class="form-text text-muted">
