--- a/html/riddle.html
+++ b/html/riddle.html
@@ -6,6 +6,8 @@
 
         </div>
         <div class="col-sm-10">
+            <form class="needs-validation" novalidate>
+
             <table class="table">
                 <thead>
                     <tr>
@@ -94,12 +96,13 @@
 
                     <tr>
                         <td colspan="3">
-                            <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="show_test()">Go!</button>
+                            <button class="btn btn-md btn-info m-0 px-3" type="submit" ng-click="show_test()">Go!</button>
                         </td>
                     </tr>
                 </tbody>
 
             </table>
+            </form>
         </div>
 
 
